--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -13,3 +13,5 @@
     text-unidecode==1.3
     tzdata==2022.2 ; sys_platform == 'win32'
     myst_parser==1.0.0
+    django-cors-headers==4.4.0
+    
